added description + desc heading

--- a/recipes/chocolate-crinkle.html
+++ b/recipes/chocolate-crinkle.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Chocolate Crinkle Cookies</h1>
-        <img src="../images/chocolatecrinkle.jpeg">
+        <img src="../images/chocolatecrinkle.jpeg" alt="An image of chocolate crinkle cookies">
+        <h2>Description</h2>
+        <p>Whether you need to make a big batch of easy cookies for your holiday cookie exchange or you're just craving fudgy, cake-like chocolate cookies, let us present you with the best chocolate crinkle cookie recipe you've ever had.</p>
+        <p>This is a foolproof recipe for the dreamiest chocolate crinkle cookies that will look as beautiful as they are delicious.</p>
     </body>
 </html>
