--- a/recipes/chocolate-crinkle.html
+++ b/recipes/chocolate-crinkle.html
@@ -12,5 +12,18 @@
         <h2>Description</h2>
         <p>Whether you need to make a big batch of easy cookies for your holiday cookie exchange or you're just craving fudgy, cake-like chocolate cookies, let us present you with the best chocolate crinkle cookie recipe you've ever had.</p>
         <p>This is a foolproof recipe for the dreamiest chocolate crinkle cookies that will look as beautiful as they are delicious.</p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 cups white sugar</li>
+            <li>1 cup unsweetened cocoa powder</li>
+            <li>1/2 cup vegetable oil</li>
+            <li>4 large eggs</li>
+            <li>2 teaspoons vanilla extract</li>
+            <li>2 cups all-purpose flour</li>
+            <li>2 teaspoons baking powder</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1/2 cup confectioners' sugar</li>
+        </ul>
     </body>
 </html>
