added recipe steps

--- a/recipes/chocolate-crinkle.html
+++ b/recipes/chocolate-crinkle.html
@@ -25,5 +25,15 @@
             <li>1/2 teaspoon salt</li>
             <li>1/2 cup confectioners' sugar</li>
         </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li>Mix sugar, cocoa, and oil together in a medium bowl. Beat in eggs, one at a time, until combined. Stir in vanilla.</li>
+            <li>Combine flour, baking powder, and salt in another bowl. Gradually stir dry ingredients into the wet ingredients until thoroughly mixed. Cover dough and refrigerator for at least 4 hours.</li>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Line two baking sheets with parchment paper.</li>
+            <li>Roll or scoop chilled dough into 1-inch balls. Coat each ball in confectioners' sugar and place 1 inch apart on the prepared cookie sheets.</li>
+            <li>Bake in the preheated oven for 10 to 12 minutes. Let stand on the cookie sheet for a few minutes before transferring to wire racks to cool.</li>
+            <li>Repeat Steps 4 and 5 to make remaining batches.</li>
+        </ol>
     </body>
 </html>
