--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/chocolate-crinkle.html">Chocolate Crinkle Cookies</a>
+        <ul>
+        <li><a href="recipes/chocolate-crinkle.html">Chocolate Crinkle Cookies</a></li>
+        <li><a href="recipes/poundcake.html">Homemade Pound Cake</a></li>
+        </ul>
     </body>
 </html>
