--- a/recipes/poundcake.html
+++ b/recipes/poundcake.html
@@ -9,5 +9,21 @@
 <body>
     <h1>Homemade Pound Cake</h1>
     <img src="../images/poundcake.jpeg" alt="An image of pound cake with strawberry and whipped cream">
+
+    <h2>Description</h2>
+    <p>Buttery homemade pound cake that's rich with the flavor of shortbread cookies, but still tender and light as a feather.</p>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3 1/4 cups white sugar</li>
+        <li>3/4 pound unsalted butter, at room temperature</li>
+        <li>6 extra large eggs, at room temperature</li>
+        <li>2 teaspoons pure vanilla extract</li>
+        <li>3 cups all-purpose flour</li>
+        <li>1/2 teaspoon baking powder</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/4 teaspoon ground nutmeg</li>
+        <li>1 cup 1% milk</li>
+    </ul>
 </body>
 </html>
