--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
         <li><a href="recipes/chocolate-crinkle.html">Chocolate Crinkle Cookies</a></li>
         <li><a href="recipes/poundcake.html">Homemade Pound Cake</a></li>
+        <li><a href="recipes/applepie.html">Apple Pie</a></li>
         </ul>
     </body>
 </html>
