--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Apple Pie</h1>
     <img src="../images/applepie.jpeg" alt="An image of apple pie">
+
+    <h2>Description</h2>
+    <p>This is a sweet, tart and delicious apple pie. Guaranteed to please. Be sure to use Granny Smith apples since they work the best.</p>
+    
 </body>
 </html>
