--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -12,6 +12,19 @@
 
     <h2>Description</h2>
     <p>This is a sweet, tart and delicious apple pie. Guaranteed to please. Be sure to use Granny Smith apples since they work the best.</p>
-    
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>3/4 cup white sugar</li>
+        <li>2 tablespoons all-purpose flour</li>
+        <li>1/2 teaspoon ground cinnamon</li>
+        <li>1/4 teaspoon ground nutmeg</li>
+        <li>1/2 teaspoon lemon zest</li>
+        <li>7 cups thinly sliced apples</li>
+        <li>2 teaspoons lemon juice</li>
+        <li>1 tablespoon butter</li>
+        <li>1 recipe pastry for a 9 inch double crust pie</li>
+        <li>4 tablespoons milk (Optional)</li>
+    </ul>
 </body>
 </html>
