changed list, added css to index

--- a/index.html
+++ b/index.html
@@ -2,16 +2,28 @@
 <html lang="en">
     
     <head>
+        <link rel="stylesheet" href="styles.css">
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-        <li><a href="recipes/chocolate-crinkle.html">Chocolate Crinkle Cookies</a></li>
-        <li><a href="recipes/poundcake.html">Homemade Pound Cake</a></li>
-        <li><a href="recipes/applepie.html">Apple Pie</a></li>
-        </ul>
+     <div class="page">
+
+        <div class="odin-recipes"><h1 class="headertext">Odin Recipes</h1></div>
+
+        <div class="ccc">
+            <div class="imgdiv"><img class="cccimage1"src="images/chocolatecrinkle.jpeg" alt="An image of chocolate crinkle cookies"></div>
+            <a class="ccclink"href="recipes/chocolate-crinkle.html">Chocolate Crinkle Cookies</a></div>
+
+        <div class="hpc">
+            <a class="hpclink"href="recipes/poundcake.html">Homemade Pound Cake</a></div>
+            <div class="imgdiv2"><img class="hpcimage1"src="images/poundcake.jpeg" alt="An image of pound cake with strawberry and whipped cream"></div>
+
+        <div class="ap">
+            <a class="aplink"href="recipes/applepie.html">Apple Pie</a></div>
+        <div class="imgdiv3"><img class="apimage1"src="images/applepie.jpeg" alt="An image of apple pie"></div>
+
+      </div>
     </body>
 </html>
