edited html and css

--- a/recipes/chocolate-crinkle.html
+++ b/recipes/chocolate-crinkle.html
@@ -2,19 +2,26 @@
 <html lang="en">
     
     <head>
+        <link rel="stylesheet" href="../styles.css">
         <meta charset="UTF-8">
         <title>Chocolate Crinkle Cookies</title>
     </head>
 
     <body>
-        <h1>Chocolate Crinkle Cookies</h1>
-        <img src="../images/chocolatecrinkle.jpeg" alt="An image of chocolate crinkle cookies">
-        <h2>Description</h2>
-        <p>Whether you need to make a big batch of easy cookies for your holiday cookie exchange or you're just craving fudgy, cake-like chocolate cookies, let us present you with the best chocolate crinkle cookie recipe you've ever had.</p>
-        <p>This is a foolproof recipe for the dreamiest chocolate crinkle cookies that will look as beautiful as they are delicious.</p>
+    <div class="page">
 
-        <h3>Ingredients</h3>
-        <ul>
+        <div class="title"><h1 class="ccch">Chocolate Crinkle Cookies</h1></div>
+
+        <div class="cccimgdiv"><img class="cccimg2"src="../images/chocolatecrinkle.jpeg" alt="An image of chocolate crinkle cookies"></div>
+
+        <h2 class="description">Description</h2>
+        
+        <div class="ccctext"><p>Whether you need to make a big batch of easy cookies for your holiday cookie exchange or you're just craving fudgy, cake-like chocolate cookies, let us present you with the best chocolate crinkle cookie recipe you've ever had.</p>
+        <p>This is a foolproof recipe for the dreamiest chocolate crinkle cookies that will look as beautiful as they are delicious.</p></div>
+
+        <h3 class="description">Ingredients</h3>
+
+        <div class="cccing"><ul>
             <li>2 cups white sugar</li>
             <li>1 cup unsweetened cocoa powder</li>
             <li>1/2 cup vegetable oil</li>
@@ -24,9 +31,11 @@
             <li>2 teaspoons baking powder</li>
             <li>1/2 teaspoon salt</li>
             <li>1/2 cup confectioners' sugar</li>
-        </ul>
+        </ul></div>
 
-        <h3>Steps</h3>
+        <h3 class="description">Steps</h3>
+
+        <div class="cccsteps">
         <ol>
             <li>Mix sugar, cocoa, and oil together in a medium bowl. Beat in eggs, one at a time, until combined. Stir in vanilla.</li>
             <li>Combine flour, baking powder, and salt in another bowl. Gradually stir dry ingredients into the wet ingredients until thoroughly mixed. Cover dough and refrigerator for at least 4 hours.</li>
@@ -34,6 +43,7 @@
             <li>Roll or scoop chilled dough into 1-inch balls. Coat each ball in confectioners' sugar and place 1 inch apart on the prepared cookie sheets.</li>
             <li>Bake in the preheated oven for 10 to 12 minutes. Let stand on the cookie sheet for a few minutes before transferring to wire racks to cool.</li>
             <li>Repeat Steps 4 and 5 to make remaining batches.</li>
-        </ol>
+        </ol></div>
+    </div>
     </body>
 </html>
