--- a/recipes/poundcake.html
+++ b/recipes/poundcake.html
@@ -2,19 +2,25 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <title>Homemade Pound Cake</title>
 </head>
 
 <body>
-    <h1>Homemade Pound Cake</h1>
-    <img src="../images/poundcake.jpeg" alt="An image of pound cake with strawberry and whipped cream">
+<div class="page">
 
-    <h2>Description</h2>
-    <p>Buttery homemade pound cake that's rich with the flavor of shortbread cookies, but still tender and light as a feather.</p>
+    <div class="title"><h1>Homemade Pound Cake</h1></div>
 
-    <h3>Ingredients</h3>
-    <ul>
+    <div class="hpcimgdiv"><img class="hpcimg2"src="../images/poundcake.jpeg" alt="An image of pound cake with strawberry and whipped cream"></div>
+
+    <h2 class="description">Description</h2>
+
+    <div class="hpctext"><p>Buttery homemade pound cake that's rich with the flavor of shortbread cookies, but still tender and light as a feather.</p></div>
+
+    <h3 class="description">Ingredients</h3>
+
+    <div class="hpcing"><ul>
         <li>3 1/4 cups white sugar</li>
         <li>3/4 pound unsalted butter, at room temperature</li>
         <li>6 extra large eggs, at room temperature</li>
@@ -24,15 +30,17 @@
         <li>1/2 teaspoon salt</li>
         <li>1/4 teaspoon ground nutmeg</li>
         <li>1 cup 1% milk</li>
-    </ul>
+    </ul></div>
 
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="description">Steps</h3>
+
+    <div class="hpcsteps"><ol>
         <li>Preheat the oven to 325 degrees F (165 degrees C). Grease and flour a 12-cup fluted tube pan (such as Bundt®).</li>
         <li>Place sugar and butter in a large mixing bowl. Cream together using an electric mixer fitted with a paddle attachment, or a hand mixer, on medium speed, until light and fluffy, about 5 minutes. Add eggs one at a time, beating for 45 seconds after each addition. Add vanilla extract and beat for 30 seconds.</li>
         <li>Combine flour, baking powder, salt, and nutmeg in a medium bowl. Add 1/2 of the dry ingredients to the butter and egg mixture, mixing on low speed, until just blended. Add 1/2 cup milk and beat on low speed until just blended. Scrape the sides of the bowl with a spatula between each addition. Repeat with remaining dry ingredients and milk.</li>
         <li>Pour batter into the prepared baking pan, filling no more than 2/3 full. Smooth the top with a spoon or a spatula.</li>
         <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean and the cake is just starting to pull away from the sides of the pan, about 1 hour and 25 minutes. Remove from the oven and allow to cool for about 15 minutes before inverting onto a plate. Allow to cool completely before serving.</li>
-    </ol>
+    </ol></div>
+</div>
 </body>
 </html>
