--- a/recipes/applepie.html
+++ b/recipes/applepie.html
@@ -2,19 +2,25 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <title>Apple Pie</title>
 </head>
 
 <body>
-    <h1>Apple Pie</h1>
-    <img src="../images/applepie.jpeg" alt="An image of apple pie">
+<div class="page">
 
-    <h2>Description</h2>
-    <p>This is a sweet, tart and delicious apple pie. Guaranteed to please. Be sure to use Granny Smith apples since they work the best.</p>
+    <div class="title"><h1>Apple Pie</h1></div>
 
-    <h3>Ingredients</h3>
-    <ul>
+    <div class="apimgdiv"><img class="apimg2" src="../images/applepie.jpeg" alt="An image of apple pie"></div>
+
+    <h2 class="description">Description</h2>
+
+   <div class="aptext"><p>This is a sweet, tart and delicious apple pie. Guaranteed to please. Be sure to use Granny Smith apples since they work the best.</p></div>
+
+    <h3 class="description">Ingredients</h3>
+
+    <div class="aping"><ul>
         <li>3/4 cup white sugar</li>
         <li>2 tablespoons all-purpose flour</li>
         <li>1/2 teaspoon ground cinnamon</li>
@@ -25,15 +31,19 @@
         <li>1 tablespoon butter</li>
         <li>1 recipe pastry for a 9 inch double crust pie</li>
         <li>4 tablespoons milk (Optional)</li>
-    </ul>
+    </ul></div>
 
-    <h3>Steps</h3>
-    <ol>
+    <h3 class="description">Steps</h3>
+
+    <div class="apsteps"><ol>
         <li>Preheat oven to 425 degrees F (220 degrees C).</li>
         <li>Mix together the sugar, flour, cinnamon, nutmeg and lemon peel.</li>
         <li>Line one crust in a 9-inch deep-dish pie pan. Layer 1/3 of apples into pie crust. Sprinkle with sugar mixture and repeat until done. Sprinkle with lemon juice and dot with butter.</li>
         <li>Place second pie crust on top of filling and flute the edges. Cut vents in top crust and brush with milk for a glazed appearance if desired.</li>
         <li>Bake at 425 degrees F (220 degrees C) for 40 to 50 minutes.</li>
-    </ol>
+    </ol></div>
+
+
+</div>
 </body>
 </html>
