attempt to fix title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
      <div class="page">
 
-        <div class="odin-recipes"><h1 class="headertext">Odin Recipes</h1></div>
+        <div class="title"><h1 class="headertext">Odin Recipes</h1></div>
 
         <div class="ccc">
             <div class="imgdiv"><img class="cccimage1"src="images/chocolatecrinkle.jpeg" alt="An image of chocolate crinkle cookies"></div>
